manifests/00-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: trouble
  labels:
    istio-injection: enabled
