manifests/01-podinfo-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-blue
  labels:
    app: podinfo
    release: blue
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: podinfo
      release: blue
  template:
    metadata:
      labels:
        app: podinfo
        release: blue
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: podinfo
          image: "quay.io/stefanprodan/podinfo:1.6.0"
          imagePullPolicy: IfNotPresent
          command:
            - ./podinfo
            - --port=8080
            - --level=info
            - --random-delay=false
            - --random-error=false
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:8080/healthz
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:8080/readyz
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 1m
              memory: 16Mi
      volumes:
      - name: data
        emptyDir: {}
