manifests/12-kube-api-access.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiuser
spec:
  selector:
    matchLabels:
      app: apiuser
  template:
    metadata:
      labels:
        app: apiuser
    spec:
      containers:
      - name: apiuser
        image: lachlanevenson/k8s-kubectl:v1.14.2
        args: [ "get", "nodes", "-w" ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
