manifests/04-virtualservice-blue.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo-blue
spec:
  hosts:
  - "blue.trouble.slack.io"
  gateways:
  - podinfo
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: podinfo-blue
