manifests/08-podinfo-weighted.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
  - "app.trouble.slack.io"
  gateways:
  - podinfo
  http:
  - route:
    - destination:
        host: podinfo
        subset: blue
      weight: 25
    - destination:
        host: podinfo
        subset: green
      weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: podinfo
spec:
  host: podinfo.trouble.svc.cluster.local
  subsets:
  - name: blue
    labels:
      release: blue
  - name: green
    labels:
      release: green
